--- a/templates/home.html
+++ b/templates/home.html
@@ -1,9 +1,11 @@
 {% extends 'base.html' %}
+{% load static %}
 
 {% block title %}Home{% endblock title %}
 
 {% block content %}
   <h1>Homepage</h1>
+  <img src="{% static 'images/df.png' %}" class="logo">
   {% if user.is_authenticated %}
     <p>Hi {{ user.username }}</p>
     <p><a href="{% url 'logout' %}">Log Out</a></p>
